log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:02:13 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:30: error: implicit declaration of function ‘EXIT’ [-Wimplicit-function-declaration]
   31 |     if(grafo == NULL) return EXIT(exit_falue);
      |                              ^~~~
graph.c:31:35: error: ‘exit_falue’ undeclared (first use in this function)
   31 |     if(grafo == NULL) return EXIT(exit_falue);
      |                                   ^~~~~~~~~~
graph.c:31:35: note: each undeclared identifier is reported only once for each function it appears in
graph.c:33:17: error: expected ‘;’ before ‘}’ token
   33 |     return grafo
      |                 ^
      |                 ;
   34 | }
      | ~                
800264f
Thu May 14 08:02:36 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:30: error: implicit declaration of function ‘EXIT’ [-Wimplicit-function-declaration]
   31 |     if(grafo == NULL) return EXIT(exit_failure);
      |                              ^~~~
graph.c:31:35: error: ‘exit_failure’ undeclared (first use in this function)
   31 |     if(grafo == NULL) return EXIT(exit_failure);
      |                                   ^~~~~~~~~~~~
graph.c:31:35: note: each undeclared identifier is reported only once for each function it appears in
3447906
Thu May 14 08:04:05 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:28: error: ‘EXIT_FAILIURE’ undeclared (first use in this function); did you mean ‘EXIT_FAILURE’?
   31 |     if(grafo == NULL) exit(EXIT_FAILIURE);
      |                            ^~~~~~~~~~~~~
      |                            EXIT_FAILURE
graph.c:31:28: note: each undeclared identifier is reported only once for each function it appears in
9f8153f
Thu May 14 08:04:17 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e68546e
Thu May 14 08:10:08 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:32:24: error: invalid use of incomplete typedef ‘Map’
   32 |     grafo->adjacencyMap->List->current = NULL;
      |                        ^~
3500507
Thu May 14 08:11:15 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b886814
Thu May 14 08:12:17 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
564c3a0
Thu May 14 08:13:28 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
edec26c
Thu May 14 08:26:37 PM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     if(map_search(g->adjacencyMap, label) == NULL) return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
ecca0cf
Thu May 14 08:27:24 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     if(map_search(g->adjacencyMap, label) != NULL) return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
f8a8d55
Thu May 14 08:33:55 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:38:41: error: passing argument 2 of ‘is_equal_string’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   38 |     if(is_equal_string(g->adjacencyMap, label) != 0) return;
      |                                         ^~~~~
graph.c:21:39: note: expected ‘void *’ but argument is of type ‘const char *’
   21 | int is_equal_string(void *key1, void *key2) {
      |                                 ~~~~~~^~~~
cc1: all warnings being treated as errors
e950677
Sun May 17 04:08:40 PM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:39:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   39 |     if(map_search(g->adjacencyMap, label) != NULL) return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
747d547
Sun May 17 04:09:16 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c51d83c
Sun May 17 04:14:35 PM UTC 2026: 
 graph.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:48:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   48 |     if(map_search(g->adjacencyMap, src) != NULL) return;
      |                                    ^~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:52:23: error: assignment discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     nuevoEdge->target = dest;
      |                       ^
graph.c:54:20: error: array subscript is not an integer
   54 |     g->adjacencyMap[src] = nuevoEdge;
      |                    ^
cc1: all warnings being treated as errors
6c03f95
Sun May 17 04:14:50 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:52:23: error: assignment discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     nuevoEdge->target = dest;
      |                       ^
graph.c:54:20: error: array subscript is not an integer
   54 |     g->adjacencyMap[src] = nuevoEdge;
      |                    ^
cc1: all warnings being treated as errors
f09d4b9
Sun May 17 04:19:27 PM UTC 2026: 
 graph.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addEdge’:
graph.c:48:5: error: unknown type name ‘mapPair’; did you mean ‘MapPair’?
   48 |     mapPair* pair = map_search(g->adjacencyMap, (void*)src);
      |     ^~~~~~~
      |     MapPair
graph.c:48:21: error: initialization of ‘int *’ from incompatible pointer type ‘MapPair *’ [-Wincompatible-pointer-types]
   48 |     mapPair* pair = map_search(g->adjacencyMap, (void*)src);
      |                     ^~~~~~~~~~
graph.c:56:30: error: request for member ‘value’ in something not a structure or union
   56 |     List* list = (List*) pair->value;
      |                              ^~
b8c6384
Sun May 17 04:20:03 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f21d960
Sun May 17 04:24:57 PM UTC 2026: 
 graph.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getEdges’:
graph.c:62:14: error: expected identifier or ‘(’ before ‘=’ token
   62 |     MapPair* = pair = map_search(g->adjacencyMap, (void*) label);
      |              ^
graph.c:63:8: error: ‘pair’ undeclared (first use in this function)
   63 |     if(pair == NULL) return NULL;
      |        ^~~~
graph.c:63:8: note: each undeclared identifier is reported only once for each function it appears in
graph.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
8d5e776
